# DevOps16

./: CMakeLists.txt  FuncA.h  Makefile  Makefile.am  configure.ac  main.cpp
.github/workflows/: build.yml
debian/: DevOps16.install  changelog  control  rules
