# configure.ac

AC_PREREQ([2.69])                    # Minimum version of Autoconf
AC_INIT([devops16], [1.0.0], [rymar.danyl@lll.kpi.ua]) # Project name, version, email
AM_INIT_AUTOMAKE([foreign])         # Initializes Automake with the 'foreign' option
AC_PROG_CXX                          # Checks for a C++ compiler
AC_PROG_CC                           # Checks for a C compiler
AC_CONFIG_HEADERS([config.h])        # Generate a header for config settings

# Add any additional checks here (e.g., for libraries)
# AC_CHECK_LIB([some_library], [function])

AC_OUTPUT([Makefile])                # Tells Autoconf to generate the Makefile
